# brain

./: .gitignore  README.md  rviz.rviz
GUI/: test 2.py  topics.md
alpha_action/: CMakeLists.txt  README.md  package.xml  res.txt
alpha_action/action/: Grip.action
alpha_action/launch/: action.launch
alpha_action/src/: fake_gripper.cpp  gripper_client.cpp  gripper_server.cpp
alpha_arbiter/: CMakeLists.txt  package.xml
alpha_camera/scripts/: houghlinestest.py
alpha_control/: CMakeLists.txt  package.xml
alpha_control/config/: alpha_control.yaml
alpha_control/launch/: alpha_control.launch
alpha_deprecated/alpha_arbiter/: package.xml
alpha_deprecated/alpha_camera/: package.xml
alpha_deprecated/alpha_image_proc/: package.xml
alpha_description/: .gitignore  CMakeLists.txt  README.md  manifest.xml  model.config  package.xml
alpha_gazebo/: CMakeLists.txt  package.xml
alpha_gazebo/src/: fake_gripper.cpp
alpha_image_proc/: CMakeLists.txt  package.xml
alpha_localization/: CMakeLists.txt  README.md  package.xml
alpha_main/: CMakeLists.txt  README.md  package.xml
alpha_navigation/: CMakeLists.txt  README.md  alpha_recovery_plugin.xml  package.xml
alpha_obstacle_avoid/: package.xml
alpha_sensors/: CMakeLists.txt  README.md  alpha_sensors_plugins.xml  package.xml
camera/: CMakeLists.txt  package.xml  runReadme.txt
localization/: .gitignore  CMakeLists.txt  package.xml
manual_control/: .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  CMakeLists.txt~  package.xml
midbrain/: CMakeLists.txt  package.xml
udev/: hokuyo.rules  hokuyo.rules.save
(+163 files in other folders)
